--- a/欧洲/瑞典永居和入籍政策.md
+++ b/欧洲/瑞典永居和入籍政策.md
@@ -6,31 +6,41 @@
 
 3.瑞典的情况是有永居才能有国籍，这点后面不再特别说明
 
-# 一.不同类型的居留许可
+# 一.毕业后找工作的居留许可
 
-（待填坑）
+https://www.migrationsverket.se/English/Private-individuals/Studying-and-researching-in-Sweden/Looking-for-work-after-studies.html
 
-# 二.永居
+要获得毕业后找工作的居留许可，你必须满足如下条件：
 
-（待填坑）
+* 必须在学签过期之前递交申请
+* 你的护照在你整个在瑞典停留的期间内都必须有效
+* 完成（指的是所有课都过了）学制至少2年的高等教育
+* 您最后的居留许可必须是在瑞典接受高等教育的居留许可
+* 你必须计划在瑞典找工
+* 在申请居留许可期间，您必须能够养活自己
+* 您必须拥有或已申请适用于瑞典医疗保健的综合医疗保险政策
 
-# 三.长居
+# 二.工签
 
-[Long-term resident in Sweden](https://www.migrationsverket.se/English/Private-individuals/EU-EEA-citizens-and-long-term-residents/Long-term-residents/Long-term-resident-in-Sweden.html)
+https://www.migrationsverket.se/English/Private-individuals/Working-in-Sweden/Employed/Work-permit-requirements.html
 
-（1）要获得长居许可，你必须满足以下条件：
+要获得工签，你必须满足如下条件：
 
-* 在瑞典连续居住5年
-* 在居住的这5年里面是以合法的身份（Residence Permit或其他合法居留许可）居住在瑞典
-* 能够供养自己和自己的家人（必须是长期收入，而不能是暂时性的收入）
+* 有双方签署的雇佣合同（如果雇佣合同的语言不是英语或瑞典语，则必须翻译+必须附上原始文件的副本）
+* 有一本有效的护照
+* 就业条件至少与瑞典集体协议规定的或该职业或行业内的习惯条款相当
+* 薪水至少与瑞典集体协议规定的或职业或行业中的惯例相同
+* 有一份能让你养活自己的工作。 为了满足这一支持要求，您的工作需要达到每月至少 13,000 瑞典克朗的税前工资
+* 当您开始工作时，有一个为您提供健康、人寿、就业和养老金保险的雇主
 
-注意：瑞典的政策是，获得长居的同时赠送永居
+# 三.永居（Permanent Residence）
 
-（2）关于连续居住年限的计算
+要获得瑞典永居，必须满足以下条件：
 
-（a）以学生身份（攻读学位低于博士等级）居住的时间不能算
-
-（b）以工作身份或者博士身份居住的时间可以算
+* 在过去7年有4年以工签身份或者博士身份居住在瑞典
+* 打算居住在瑞典
+* 过着”有序生活“
+* 有足够的财力供养自己
 
 # 四.国籍（Citizenship）
 
@@ -85,8 +95,9 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 
 要点：
 
-* 一年内离境时间累计在6周以内，没有影响
-* 一年内离境时间达6周以上，把离境时间从惯常居住时间中扣除
+* 一年内离境时间累计在6个月以内，没有影响
+* 一年内离境时间达6个月以上10个月以下，把离境时间从惯常居住时间中扣除
+* 一年内离境10个月以上，惯常居住中断
 
 3.什么叫”orderly life“？
 
@@ -104,3 +115,7 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 
 * 你有没有未缴纳的税款
 * 你有没有支付maintenance payment
+
+4.拿瑞典永居或者入籍需要会瑞典语吗？
+
+答：不需要
