--- a/欧洲/欧洲留学费用计算概览.md
+++ b/欧洲/欧洲留学费用计算概览.md
@@ -38,19 +38,17 @@ LiU International Scholarship
 
 总包：人民币193695元
 
-# 2.丹麦哥本哈根（丹麦技术大学DTU）
+# 2.丹麦哥本哈根（丹麦技术大学DTU Computer Science and Engineering ）
 
-（汇率：2022年10月5日）
+（汇率：2022年10月19日）
 
-学费：一年15000欧，合人民币106337元
+学费：30000欧两年
 
-生活费：一个月8000丹麦克朗，合人民币7625元
+生活费（不算房租）：7617丹麦克朗一个月
 
-两年学费总包：30000欧，合人民币212674元
+房租（按3人合租便宜的来算）：4667丹麦克朗一个月
 
-两年生活费总包：192000丹麦克朗，合人民币183006元
-
-两年总包：人民币395680元
+总包：人民币494251元
 
 # 3.瑞典哥德堡（查尔姆斯理工大学CTH Master of Computer Science）
 
