--- a/欧洲/瑞典永居和入籍政策.md
+++ b/欧洲/瑞典永居和入籍政策.md
@@ -119,3 +119,7 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 4.拿瑞典永居或者入籍需要会瑞典语吗？
 
 答：不需要
+
+5.”获得永久居留许可的时间包括在惯常居住期间“这句话如何理解？
+
+答：意思就是说工作or读博4年拿永居，再1年就可以拿国籍；而不是说拿了永居后再呆5年才能拿国籍
