--- a/欧洲/瑞典永居和入籍政策.md
+++ b/欧洲/瑞典永居和入籍政策.md
@@ -123,3 +123,7 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 5.”获得永久居留许可的时间包括在惯常居住期间“这句话如何理解？
 
 答：意思就是说工作or读博4年拿永居，再1年就可以拿国籍；而不是说拿了永居后再呆5年才能拿国籍
+
+6.永居要求中”在过去7年有4年以工签身份或者博士身份居住在瑞典“这7年必须再瑞典境内吗？
+
+答：不必须，其实这个7年不重要，重要的就是在瑞典读博or工作4年
