--- a/欧洲/芬兰永居和入籍政策.md
+++ b/欧洲/芬兰永居和入籍政策.md
@@ -69,7 +69,7 @@ https://migri.fi/en/language-skills
 
 1.光靠读书，不工作，能不能拿到芬兰永居？
 
-答：这得看你指的”读书“是什么。如果指的是硕士2年+博士4年，那可以，因为博士发的是工签，即使你毕业后工签也不会失效；但如果是本科3.5年+硕士2年，不行，因为本科和硕士发的是学签，毕业后学签失效，不满足永居条件第二条（即申请永居时，获得连续居留许可的条件仍然满足）
+答：这得看你指的”读书“是什么。如果指的是硕士2年+博士4年，那可以，因为博士发的是工签，即使你毕业后工签也不会失效；但如果是本科3.5年+硕士2年，不行，因为本科和硕士发的是学签，毕业后如果没续上工签（即没找到工作），学签，不满足永居条件第二条（即申请永居时，获得连续居留许可的条件仍然满足）。简单来说就是，想光读书不工作就拿永居不可能
 
 2.获得芬兰永居有芬兰语要求吗？
 
