--- a/欧洲/瑞典永居和入籍政策.md
+++ b/欧洲/瑞典永居和入籍政策.md
@@ -127,3 +127,11 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 6.永居要求中”在过去7年有4年以工签身份或者博士身份居住在瑞典“这7年必须再瑞典境内吗？
 
 答：不必须，其实这个7年不重要，重要的就是在瑞典读博or工作4年
+
+7.瑞典永居有移民监吗？
+
+答：有——离开瑞典超过1年永居取消
+
+8.maintenace payment指的是什么？
+
+答：就是指的连续的工资收入，这个主要是看你缴纳税款的能力
