--- a/欧洲/欧洲留学费用计算概览.md
+++ b/欧洲/欧洲留学费用计算概览.md
@@ -305,3 +305,55 @@ Part4：个人总结
 （1）Finland Scholarship颁给每个项目的第一名（most merited）
 
 （2）Tempere Scholarship综合动机信、本科gpa、工作经验（加分）来评估
+
+# 11.荷兰阿姆斯丹（阿姆斯特丹自由大学VU Amsterdam Computer Security）
+
+学费：15790欧元1年
+
+生活费（不算房租）：1010欧元1个月
+
+房租（按3人合租便宜的算）：691欧元1个月
+
+总包：511496元
+
+关于奖学金和学生贷款：（只写中国人能领的；”其他奖学金“中的OKP信息暂缺）
+
+https://vu.nl/en/education/more-about/scholarships-for-international-masters-students
+
+主要有三大奖学金项目：
+
+* 阿自由自己发的奖学金
+* 其他奖学金
+* 学生贷款项目
+
+以下这个网站是一个搜索引擎，可以搜索荷兰的各种奖学金项目：
+
+https://www.studyinnl.org/finances
+
+（1）阿自由自己发的奖学金
+
+VUFP+HSP：VUFP100%学费减免+HSP5000欧或10000欧生活费补助
+
+按减免少的算：两年总包 = 两年生活费总包-5000欧 = 人民币252750元
+
+按减免多的算：两年总包 = 两年生活费总包-10000欧 = 人民币217473元
+
+VUFP要点：
+
+* 你不来自荷兰或者其他欧盟国家
+* 你没有lower tuition fee的资格
+* 你的GPA在达到Dutch 8等级
+* 你被录取到阿自由的英语授课硕士（2月份入学的+某些联培项目不行）
+* 你的前一个学位不是在荷兰获得的
+* 你开始读硕士之前不需要完成预科
+* 先发第一年，如果第一年的学分100%完成了，自动续到第二年
+
+HSP要点
+
+* 申请VUFP的时候会自动一起申HSP，不需要单独申请
+* 只发第一年
+* 中了VUFP才会有HSP
+
+（2）学生贷款
+
+（待填坑）
