--- a/欧洲/瑞典永居和入籍政策.md
+++ b/欧洲/瑞典永居和入籍政策.md
@@ -130,7 +130,7 @@ https://www.migrationsverket.se/English/Private-individuals/Becoming-a-Swedish-c
 
 7.瑞典永居有移民监吗？
 
-答：有——离开瑞典超过1年永居取消
+答：有——每年需要在瑞典境内至少居住半年
 
 8.maintenace payment指的是什么？
 
