--- a/欧洲/欧洲留学费用计算概览.md
+++ b/欧洲/欧洲留学费用计算概览.md
@@ -308,13 +308,15 @@ Part4：个人总结
 
 # 11.荷兰阿姆斯丹（阿姆斯特丹自由大学VU Amsterdam Computer Security）
 
+（汇率：2022年10月21日）
+
 学费：15790欧元1年
 
-生活费（不算房租）：1010欧元1个月
+生活费（不算房租）：500欧元1个月
 
 房租（按3人合租便宜的算）：691欧元1个月
 
-总包：511496元
+总包：人民币425767元
 
 关于奖学金和学生贷款：（只写中国人能领的；”其他奖学金“中的OKP信息暂缺）
 
