--- a/欧洲/留学申请/欧洲留学费用计算概览.md
+++ b/欧洲/留学申请/欧洲留学费用计算概览.md
@@ -306,7 +306,7 @@ Part4：个人总结
 
 （2）Tempere Scholarship综合动机信、本科gpa、工作经验（加分）来评估
 
-# 11.荷兰阿姆斯丹（阿姆斯特丹自由大学VU Amsterdam Computer Security）
+# 12.荷兰阿姆斯丹（阿姆斯特丹自由大学VU Amsterdam Computer Security）
 
 （汇率：2022年10月21日）
 
@@ -359,3 +359,13 @@ HSP要点
 （2）学生贷款
 
 （待填坑）
+
+# 13.瑞典于默奥（于默奥大学Umea Artificial Intelligence）
+
+（汇率：2022年10月26日）
+
+学费：285600瑞典克朗
+
+生活费：8658瑞典克朗一个月
+
+总包：人民币326766元
