--- a/学习工作/语言学习资源.md
+++ b/学习工作/语言学习资源.md
@@ -19,20 +19,19 @@
 
 # 二.英语
 
-## 一.托福
+## 1.托福
 
 1. https://m.q.qq.com/a/s/b02daa2de3b24e7a5deedf8dc0c8e1a4（托福全套）
 2. https://toefl.weixue100.com/toefl/exam/index （这个是威学的模考网站,上面包含了TPO1-65的套题 完全模拟全套考试流程）
 3. 雅思托福资料群网址 https://github.com/Jackwire/Jackwire.github.io
 
-## 二.雅思
+## 2.雅思
 
-
-## 三.GRE和GMAT
+## 3.GRE和GMAT
 
 1. GRE资料，有人刷到了原题 链接： https://pan.baidu.com/s/1MqD8vaT_Q2yHfJ2ZBpiFdw 提取码：70ev
 
-# 四.其他
+## 4.其他
 
 1. 百度网盘的链接如下 链接: https://pan.baidu.com/s/1gAdNd7tanb_w2LG9tgEaWA 提取码: xkk7 pte学习资料
 2. 我通过百度网盘分享的文件：pte全集 链接: https://pan.baidu.com/s/1IaBoSxucVz-kaU56HoXRoA  提取码:w3y2 复制这段内容打开「百度网盘APP 即可获取」
@@ -41,3 +40,12 @@
 外语交流相互学习网
 
 4. 练听力强推Englishpod
+
+# 三.法语
+
+1. 「你好!法语 单词手册.pdf」等文件 [https://www.aliyundrive.com/s/DXX5m5camgX](https://link.zhihu.com/?target=https%3A//www.aliyundrive.com/s/DXX5m5camgX)
+   点击链接保存，或者复制本段内容，打开「阿里云盘」APP ，无需下载极速在线查看，视频原画倍速播放
+2. 「02 你好法语欧标A1课程【142课时】」等文件 [https://www.aliyundrive.com/s/SmAju7mn5bY](https://link.zhihu.com/?target=https%3A//www.aliyundrive.com/s/SmAju7mn5bY)
+   点击链接保存，或者复制本段内容，打开「阿里云盘」APP ，无需下载极速在线查看，视频原画倍速播放
+3. 「最新法语语法练习与指导.pdf」等文件 [https://www.aliyundrive.com/s/xPTv4qkY5pc](https://link.zhihu.com/?target=https%3A//www.aliyundrive.com/s/xPTv4qkY5pc)
+   点击链接保存，或者复制本段内容，打开「阿里云盘」APP ，无需下载极速在线查看，视频原画倍速播放
