--- a/欧洲/留学申请/欧洲留学申请概览.md
+++ b/欧洲/留学申请/欧洲留学申请概览.md
@@ -394,3 +394,21 @@ https://www.universityadmissions.se/intl/search?freeText=Computer+technology&adv
 （4）计算机工程导论：7.5学分
 
 （5）以下课程至少7.5学分：离散数学、数理统计、数据结构、算法、概率论
+
+11.乌普萨拉大学UU Game Design
+
+https://www.uu.se/en/admissions/master/selma/program/?pKod=HSD2N
+
+基本信息
+
+（1）时长：2年
+
+（2）授课语言：英语
+
+（3）学费：120000瑞典克朗两年
+
+（4）地点：瑞典乌普萨拉
+
+英语要求：雅思总分不低于6.5，小分不低于5.5（English6）
+
+学历要求：国际认可的大学的本科学位
