--- a/攒金币路子/whv/澳大利亚.md
+++ b/攒金币路子/whv/澳大利亚.md
@@ -11,12 +11,16 @@
 * 不得由受抚养子女陪同
 * 大致申请流程：
 
-# 二.申请材料
+# 二.申请要求
 
 * 显示您的姓名、个人详细信息以及护照签发日期和到期日期的护照页面
 * 显示您父母姓名的出生证明副本
 * 资金证明（通常为 5,000 澳元）
-* 英语要求：雅思不低于4.5 或 PTE不低于30（1年内有效）
+* 英语要求：雅思不低于4.5 或 PTE不低于30 或 托福不低于32（家考的都不行，1年内有效）
+* 有高等教育经历或至少2年的大学学习（学信网要可认证）
+* 健康要求：没有肺结核病
+
+满足要求的前提下抽签，抽到了才能获邀
 
 # 三.First Work and Holiday Visa
 
