--- a/攒金币路子/whv/新西兰.md
+++ b/攒金币路子/whv/新西兰.md
@@ -1,3 +1,5 @@
+官网网址：https://www.immigration.govt.nz/new-zealand-visas/preparing-a-visa-application/working-in-nz/how-long-can-you-work-in-new-zealand-for/working-holiday-visa
+
 # 一.签证总览
 
 * 时长：1年
