--- a/欧洲/留学申请/欧陆转码项目整理.md
+++ b/欧洲/留学申请/欧陆转码项目整理.md
@@ -268,4 +268,59 @@ https://www.uu.se/en/admissions/master/selma/studieplan/?pKod=TBV2M
 
 https://kurser.lth.se/lot/programme?programme=MMSR&ay=22_23
 
-六.
+# 六.丹麦 哥本哈根大学 IT Cognition
+
+官网网址：https://studies.ku.dk/masters/it-and-cognition/
+
+## 1.总览
+
+* 时长：2年
+* 授课语言：英语
+* 学费：188800丹麦克朗两年
+* 地点：丹麦哥本哈根
+
+## 2.录取要求
+
+英语要求：托福不低于83 或 雅思不低于6.5
+
+学术背景要求：
+
+如果您持有下列学位之一，您将被视为自动满足有关学历相关性的要求
+
+* 哥本哈根大学、奥胡斯大学、丹麦技术大学、奥尔堡大学或南丹麦大学的任何计算机科学学士学位
+* 来自哥本哈根大学、奥胡斯大学、奥尔堡大学、南丹麦大学的至少包含15ECTS如下学科的人文社科学士学位：语言技术、计算机科学、认知科学、语言学
+* 哥本哈根大学的计算机科学或数据科学士学位
+* 哥本哈根大学的认知数据科学学士学位
+
+对于中国学生来说，需要：
+
+* 获得国际认可的本科学位
+* 至少15ECTS如下学科：语言技术、计算机科学、认知科学、语言学
+
+## 3.课程设置
+
+https://hum.ku.dk/uddannelser/aktuelle_studieordninger/it_cognition/it_cognition_msc.pdf
+
+# 七.丹麦 丹麦技术大学 Automation and Robot Technology
+
+官网网址：https://studieinformation.dtu.dk/english/master-of-science-in-engineering/electrical-engineering/programme-specification
+
+## 1.总览
+
+* 时长：2年
+* 授课语言：英语
+* 学费：30000欧元两年
+* 地点：丹麦哥本哈根
+
+## 2.录取要求
+
+英语要求：雅思总分不低于6.5 或 托福总分不低于88
+
+学术背景要求：
+
+* 持有电子工程或相关领域学士学位
+* 毕业10年内
+
+## 3.课程设置
+
+https://studieinformation.dtu.dk/english/master-of-science-in-engineering/electrical-engineering/study-lines/automation-and-robot-technology
