--- a/欧洲/留学申请/爱尔兰转码项目整理.md
+++ b/欧洲/留学申请/爱尔兰转码项目整理.md
@@ -11,7 +11,7 @@
 * 都柏林大学MSc Digital Information Management数字信息管理硕士 官网搜不到
 * 高威大学 Higher Diploma (Software Design and Development)—Industry Stream/ICT Skills 官网404了
 
-# 一.都柏林大学 MSc Computer Science (Conversion) 计算机（转换）理学硕士
+# 一.都柏林大学 MSc Computer Science (Conversion) 
 
 官网网址：https://link.zhihu.com/?target=https%3A//sisweb.ucd.ie/usis/%21W_HU_MENU.P_PUBLISH%3Fp_tag%3DPROG%26MAJR%3DT195
 
@@ -216,7 +216,7 @@ https://www.universityofgalway.ie/courses/taught-postgraduate-courses/informatio
 
 ## 3.课程设置
 
-## https://apps.maynoothuniversity.ie/courses/?TARGET=QS&MODE=VIEW&TARGET_SOURCE=QUALIFICATION&QUALIFICATION_CODE=MSCF1
+https://apps.maynoothuniversity.ie/courses/?TARGET=QS&MODE=VIEW&TARGET_SOURCE=QUALIFICATION&QUALIFICATION_CODE=MSCF1
 
 # 九.梅努斯大学 MSc Enabled Innovation
 
